<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.incorporated.gatti.concentrationgame.GameActivity"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TableRow>
            <Button
                android:id="@+id/grid0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:padding="1dp"
                />
            <Button
                android:id="@+id/grid1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:padding="1dp"
                />
            <Button
                android:id="@+id/grid2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/grid4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid6"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid7"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/grid8"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid9"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid10"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid11"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/grid12"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid13"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid14"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid15"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/grid16"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid17"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid18"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid19"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/grid20"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid21"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid22"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
            <Button
                android:id="@+id/grid23"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:id="@+id/namesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/scoresLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/menu"
            />
        <Button
            android:id="@+id/newgame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/newgame"
            />
        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/restart"
            />
        <!--<EditText
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Nombre"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLength="12"
            />-->
            <!--android:cursorVisible="false"-->
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
</LinearLayout>
</ScrollView>